--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "format": "prettier --write .",
     "check-format": "prettier --check .",
     "prepare": "husky install",
-    "build": "concurrently npm:build:*",
-    "build:webpack": "webpack --mode=production",
-    "build:types": "tsc",
+    "build": "webpack --mode=production",
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
