--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
       "format": "prettier --write .",
       "check-format": "prettier --check .",
       "prepare": "husky install",
-      "build": "webpack --mode=production",
+      "build": "webpack --mode=production && cp 404.html dist/",
       "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
